// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Layout - ThemeModeButton renders dark theme correctly 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root HookGlobalStyles-navBarButton-9"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <svg
      data-file-name="SvgIcon_light_mode"
      fill="#e0e0e0"
      height={24}
      width={24}
    />
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`component: Layout - ThemeModeButton renders light theme correctly 1`] = `
<button
  className="MuiButtonBase-root MuiIconButton-root HookGlobalStyles-navBarButton-9"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiIconButton-label"
  >
    <svg
      data-file-name="SvgIcon_dark_mode"
      fill="#e0e0e0"
      height={24}
      width={24}
    />
  </span>
</button>
`;
